--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
+    
 	<link rel="stylesheet" href="../public/style.css" type="text/css" />
 </head>
 
@@ -17,7 +17,7 @@
 	</header>
 	<div class="container">
 		<div class="form-container">
-			<form id="solve-form">
+			<form id="solve-form" >
 				<textarea
           rows="10"
           cols="85"
@@ -25,7 +25,7 @@
           name="puzzle"
         ></textarea>
         <br />
-        <input type="button" value="Solve" id="solve-button"/>
+        <input type="submit" value="Solve" id="solve-button"/>
         <div id="error-msg"></div>
         </form>
         <form id="check-form">
